# os_memory

./: CMakeLists.txt  Frame.cpp  Frame.h  FrameTable.cpp  FrameTable.h  InputData.h  InputParser.cpp  InputParser.h  MainMemory.cpp  MainMemory.h  Page.cpp  PageTable.cpp  README.txt  ReplacementAlgorithm.h  ReplacementAlgorithmFactory.cpp  ReplacementAlgorithmFactory.h  ReplacementStrategy.cpp  ReplacementStrategy.h  ReplacementStrategyFactory.cpp  ReplacementStrategyFactory.h  Segment.cpp  SegmentTable.cpp  SegmentTable.h  build.gradle  main.cpp  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
input/: hw3input.txt
lib/: libboost_program_options.dylib
src/main/java/: Disk.java  FifoReplacementStrategy.java  InputData.java  InputParser.java  LfuReplacementStrategy.java  LruReplacementStrategy.java  MainMemory.java  MemoryManager.java  MemoryNotFoundException.java  MemoryRequest.java  MemoryResponse.java  MemoryResponseBuilder.java  OptReplacementStrategy.java  Page.java  PageTable.java  ProcessData.java  ReplacementStrategy.java  ReplacementStrategyFactory.java  Runner.java  Segment.java  SegmentTable.java  WsReplacementStrategy.java
